fix: pageLayout gap and margin

--- a/frontend/src/components/MovieCard/MovieCard.css
+++ b/frontend/src/components/MovieCard/MovieCard.css
@@ -1,6 +1,6 @@
 .movie-card {
-  width: 10.5rem;
-  height: 23rem;
+  width: 10rem;
+  height: 22rem;
 }
 
 .movie-card-btn {
