--- a/frontend/src/pages/PageLayout/PageLayout.css
+++ b/frontend/src/pages/PageLayout/PageLayout.css
@@ -1,6 +1,6 @@
 .page-container {
-  padding: 6rem 2rem;
-  width: 94vw;
+  padding: 6rem 4rem;
+  width: 90vw;
 }
 
 .page-title {
@@ -8,7 +8,8 @@
 }
 
 .page-content {
+  margin-top: 2rem;
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;
+  gap: 2rem;
 }
